--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,9 +13,13 @@
   <div class="row">
     <div class="col-md-3">
 
-      <%= render 'users/user_info.html.erb', user: @user %>
+      <% if @book.user_id == current_user.id %>
+        <%= render 'users/user_info.html.erb', user: @user %>
+      <% else %>
+        <%= render 'users/user_info.html.erb', user: @user %>
+      <% end %>
+        <%= render 'books/create_book.html.erb', book: @books %>
 
-      <%= render 'books/create_book.html.erb', book: @books %>
 
     </div>
 
@@ -33,7 +37,7 @@
         <tbody>
           <% @books.each do |book| %>
           <tr>
-            <td><%= image_tag book.get_image %></td>
+            <td><%= link_to image_tag(book.get_image), user_path(book.user.id), method: :get %><br></td>
             <td>
               <%= link_to book_path(book.id) do %>
                 <%= book.title %>
