--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -15,7 +15,7 @@
         <tbody>
           <tr>
             <td>
-              <%= image_tag @book.get_image %><br>
+              <%= link_to image_tag(@book.get_image), user_path(@book.user.id), method: :get %><br>
               <%= link_to @book.user.name, user_path(@book.user.id), method: :get %>
             </td>
             <td>
@@ -26,7 +26,7 @@
             </td>
             <% if @book.user == current_user %>
             <td>
-              <%= link_to "Edit", edit_book_path, class: 'btn btn-sm btn-success' %>
+              <%= link_to "Edit", edit_book_path(@book.id), class: 'btn btn-sm btn-success' %>
             </td>
             <td>
               <%= link_to "Destroy", book_path(@book), method: :delete,  "data-confirm" => "本当に消しますか？", class: 'btn btn-sm btn-danger' %>
