--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
                 </li>
                 <li>
                   <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-light" do %>
-                    <i class="fas fa-sign-in-alt" style="color:white;"></i> Log out
+                    <i class="fas fa-sign-out-alt" style="color:white;"></i> Log out
                   <% end %>
                 </li>
               <% else %>
