--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -52,7 +52,7 @@
                 <%= user.name %>
               </td>
               <td>
-                <%= link_to "show", user_path(user.id), method: :get %>
+                <%= link_to "Show", user_path(user.id), method: :get %>
               </td>
             </tr>
           <% end %>
