--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
           <% @books.each do |book| %>
             <tr>
               <td>
-                <%= image_tag book.get_image %>
+                <%= link_to image_tag(book.get_image),user_path(book.user.id), method: :get %>
               </td>
               <td>
                 <%= link_to book.title, book_path(book.id), method: :get %>
